k8s-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deveagles
  labels:
    name: deveagles
