k8s-manifests/kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: deveagles
spec:
  serviceName: kafka-service
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "600m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: deveagles
spec:
  type: ClusterIP
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
