k8s-manifests/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  namespace: deveagles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.17.0
          ports:
            - containerPort: 5601
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "600m"
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: deveagles
spec:
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    app: kibana
