k8s-manifests/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deployment
  namespace: deveagles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.17.0
          ports:
            - containerPort: 5000
            - containerPort: 5044
          volumeMounts:
            - name: logstash-config-volume
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "600m"
      volumes:
        - name: logstash-config-volume
          configMap:
            name: logstash-config
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
  namespace: deveagles
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 5000
      targetPort: 5000
    - name: beats
      port: 5044
      targetPort: 5044
  selector:
    app: logstash
