k8s-manifests/vue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
  namespace: deveagles
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
        - name: vue-container
          image: 64etuor/k8s-vue-ing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: vue-service
  namespace: deveagles
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: vue
