k8s-manifests/zookeeper.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: deveagles
spec:
  serviceName: zookeeper-service
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: deveagles
spec:
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
